--- a/service/html/dashboard.html
+++ b/service/html/dashboard.html
@@ -7,7 +7,7 @@
          <th>History</th>
          <th>Running </th>
          <th>Progress</th>
-         <th>Configure</th>
+         <th ng-click="loadAllClients()"><span class="glyphicon glyphicon-refresh"></span></th>
       </tr>
    </thead>
    
@@ -26,7 +26,9 @@
 <div class="input-group">
    <input type="text" class="form-control" placeholder="Add a new client" ng-model="newclient.ip">
    <span class="input-group-btn">
-   <button class="btn btn-default" type="button" ng-click="addClient"><span class="glyphicon glyphicon-plus-sign"></span></button>
+   <button class="btn btn-default" type="button" ng-click="addClient(newclient)">
+      <span class="glyphicon glyphicon-plus-sign"></span>
+   </button>
    </span>
 </div>
  </form>
