Adds modal window to configure clients.

--- a/service/html/index.html
+++ b/service/html/index.html
@@ -14,12 +14,14 @@
 </head>
   <script src="/js/jquery.js"></script>
   <script src="/js/ajaxmin.js"></script>
+  <script src="/js/ajaxmodal.js"></script>
   <script src="/js/ajaxroutermin.js"></script>
   <script src="/js/bootstrap.min.js"></script>
   <script src="/js/ajaxresourcemin.js"></script>
   <script src="/js/app.controller.js"></script>
   <script src="/js/dashboard.controller.js"></script>
   <script src="/js/clients.resource.js"></script>
+  <script src="/js/tests.resource.js"></script>
   <script src="/js/stats.resource.js"></script>
 
 <body ng-controller="MainCtrl">
