--- a/service/html/index.html
+++ b/service/html/index.html
@@ -20,6 +20,7 @@
   <script src="/js/ajaxresourcemin.js"></script>
   <script src="/js/app.controller.js"></script>
   <script src="/js/dashboard.controller.js"></script>
+  <script src="/js/configure.controller.js"></script>
   <script src="/js/clients.resource.js"></script>
   <script src="/js/tests.resource.js"></script>
   <script src="/js/stats.resource.js"></script>
