--- a/service/html/index.html
+++ b/service/html/index.html
@@ -21,9 +21,11 @@
   <script src="/js/app.controller.js"></script>
   <script src="/js/dashboard.controller.js"></script>
   <script src="/js/configure.controller.js"></script>
+  <script src="/js/serverevents.controller.js"></script>
   <script src="/js/clients.resource.js"></script>
   <script src="/js/tests.resource.js"></script>
   <script src="/js/stats.resource.js"></script>
+  <script src="/js/server.resource.js"></script>
 
 <body ng-controller="MainCtrl">
     <div id="wrapper">
