--- a/service/html/leftmenu.html
+++ b/service/html/leftmenu.html
@@ -11,7 +11,7 @@
             <a href="#" ui-sref='statistics()'>Statistics</a>
         </li>
         <li>
-            <a href="#" ui-sref='events()'>Server Events</a>
+            <a href="#" ui-sref='serverevent()'>Server Events</a>
         </li>
          <li>
             <a href="#"  ui-sref='configuration()'>Backup / Restore Configuration</a>
