--- a/service/html/serverevent.html
+++ b/service/html/serverevent.html
@@ -10,7 +10,7 @@
    
    <tbody>
       <tr ng-repeat="e in events track by $index">
-         <td>{{line + $index }}</td>
+         <td>{{1 + $index }}</td>
          <td><p>{{e}}</p></td>
       </tr>
 	</tbody>
