--- a/service/html/stats.html
+++ b/service/html/stats.html
@@ -1,3 +1,17 @@
-<html>
-        <title> Automation server statistics </title>
-</html>
+<div class="modal fade">
+	<div class="modal-dialog" style="width: 80%; display: block"> 
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-hidden="true" ng-click="close(null, 200)">&times;</button>
+				<h4 class="modal-title">Automation Server Statistics for {{client.ip}} </h4>
+			</div>
+			<div class="modal-body">
+				
+				<div>
+				</div>
+
+
+			</div>
+		</div> 
+	</div> 
+</div>
