--- a/service/html/index.html
+++ b/service/html/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="AF">
 <head>
+    <title>Automation Framework</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -17,8 +18,11 @@
   <script src="/js/ajaxmodal.js"></script>
   <script src="/js/ajaxroutermin.js"></script>
   <script src="/js/bootstrap.min.js"></script>
+  
   <script src="/js/ajaxresourcemin.js"></script>
+
   <script src="/js/app.controller.js"></script>
+  <script src="/js/stats.controller.js"></script>
   <script src="/js/dashboard.controller.js"></script>
   <script src="/js/configure.controller.js"></script>
   <script src="/js/serverevents.controller.js"></script>
@@ -26,6 +30,7 @@
   <script src="/js/tests.resource.js"></script>
   <script src="/js/stats.resource.js"></script>
   <script src="/js/server.resource.js"></script>
+
 
 <body ng-controller="MainCtrl">
     <div id="wrapper">
