Adds backup and restore features.

--- a/service/html/leftmenu.html
+++ b/service/html/leftmenu.html
@@ -10,7 +10,7 @@
             <a href="#" ui-sref='serverevent()'>Server Events</a>
         </li>
          <li>
-            <a href="#"  ui-sref='configuration()'>Backup / Restore Configuration</a>
+            <a href="#"  ui-sref='manage()'>Backup / Restore Configuration</a>
         </li>
         <li>
             <a href="#" ui-sref='help()'>Help</a>
