--- a/service/html/index.html
+++ b/service/html/index.html
@@ -23,12 +23,15 @@
 
   <script src="/js/app.controller.js"></script>
   <script src="/js/stats.controller.js"></script>
+  <script src="/js/manage.controller.js"></script>
   <script src="/js/dashboard.controller.js"></script>
   <script src="/js/configure.controller.js"></script>
   <script src="/js/serverevents.controller.js"></script>
+
   <script src="/js/clients.resource.js"></script>
   <script src="/js/tests.resource.js"></script>
   <script src="/js/stats.resource.js"></script>
+  <script src="/js/manage.resource.js"></script>
   <script src="/js/server.resource.js"></script>
 
 
