Adds global setting

--- a/service/html/dashboard.html
+++ b/service/html/dashboard.html
@@ -1,5 +1,8 @@
 <div>
 <H3 style="text-align: center"> Dashboard </H3>
+<div class="alert alert-success">
+  <strong ng-show="message">{{message}}</strong> 
+</div>
 <table class = "table">
    <thead>
       <tr>
