--- a/service/html/index.html
+++ b/service/html/index.html
@@ -26,6 +26,7 @@
   <script src="/js/manage.controller.js"></script>
   <script src="/js/dashboard.controller.js"></script>
   <script src="/js/configure.controller.js"></script>
+  <script src="/js/settings.controller.js"></script>
   <script src="/js/serverevents.controller.js"></script>
 
   <script src="/js/clients.resource.js"></script>
@@ -33,6 +34,7 @@
   <script src="/js/stats.resource.js"></script>
   <script src="/js/manage.resource.js"></script>
   <script src="/js/server.resource.js"></script>
+  <script src="/js/settings.resource.js"></script>
 
 
 <body ng-controller="MainCtrl">
