--- a/service/html/leftmenu.html
+++ b/service/html/leftmenu.html
@@ -9,8 +9,11 @@
         <li>
             <a href="#" ui-sref='serverevent()'>Server Events</a>
         </li>
-         <li>
+        <li>
             <a href="#"  ui-sref='manage()'>Backup / Restore Configuration</a>
+        </li>
+        <li>
+            <a href="#"  ui-sref='settings()'>Global settings</a>
         </li>
         <li>
             <a href="#" ui-sref='help()'>Help</a>
