--- a/service/html/configure.html
+++ b/service/html/configure.html
@@ -1,57 +1,50 @@
 <div class="modal fade">
-	<div class="modal-dialog" style="width: 80%; display: block"> 
-		<div class="modal-content">
-			<div class="modal-header">
-				<button type="button" class="close" data-dismiss="modal" aria-hidden="true" ng-click="close(null, 200)">
-					&times;</button>
-					<h4 class="modal-title">Configure {{client.ip}}</h4>
-				</div>
-				<div class="modal-body">
-					<div class="container-fluid">
-						<div class="row">
-							<div class="col-sm-3 col-md-6 col-lg-4">
-								<h4>Select & Configure available test</h4>
-								<div class="dropdown">
-									<button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">										{{currentTest.name || 'Select a test' }}<span class="caret"></span></button>
-									<ul class="dropdown-menu">
-										<li class="list-group-item"
-										ng-repeat="t in allTests"
-										ng-click="selectTest(t)">
-										{{t.name}}</li>
-									</ul>
-								</div>
-								<div>
-									<form class="form-horizontal">
-										<div class="control-group" ng-repeat="var in variables">
-											<label class="control-label">{{var.name}}</label>
-											<div class="controls">
-												<input type="text" ng-model="var.value" ng-value="var.value">
-											</div>
-										</div>
-										<div class="control-group">
-										<button class="btn btn-default" ng-show="currentTest" type="button" ng-click="addTest()"> Add this test </button>
-										</div>
-									</form>
-								</div>
-							</div>
-							<div class="col-sm-9 col-md-6 col-lg-8">
-								<h4> Click to delete a test </h4>
-								<div class="list-group">
-									<button type="button" class="list-group-item"
-									ng-repeat="t in selectedTests"
-									ng-click="removeTest(t)">{{t.name}}</button>
-								</div>
-							</div>
-						</div>
-						<div>
-							{{message}}
-							<button class="btn btn-primary pull-right btn-sm RbtnMargin"
-							type="button"
-							ng-click="save()">Save configuration </button>
-						</div>
-					</div>
-				</div>
-			</div> 
-		</div> 
-	</div>
-
+    <div class="modal-dialog" style="width: 80%; display: block">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true" ng-click="close(null, 200)">
+                    &times;</button>
+                <h4 class="modal-title">Configure {{client.ip}}</h4>
+            </div>
+            <div class="modal-body">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-sm-3 col-md-6 col-lg-4">
+                            <h4>Select & Configure available test</h4>
+                            <div class="dropdown">
+                                <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown"> {{currentTest.name || 'Select a test' }}<span class="caret"></span></button>
+                                <ul class="dropdown-menu">
+                                    <li class="list-group-item" ng-repeat="t in allTests" ng-click="selectTest(t)">
+                                        {{t.name}}</li>
+                                </ul>
+                            </div>
+                            <div>
+                                <form class="form-horizontal">
+                                    <div class="control-group" ng-repeat="var in variables">
+                                        <label class="control-label">{{var.name}}</label>
+                                        <div class="controls">
+                                            <input type="text" ng-model="var.value" ng-value="var.value">
+                                        </div>
+                                    </div>
+                                    <div class="control-group">
+                                        <button class="btn btn-default" ng-show="currentTest" type="button" ng-click="addTest()"> Add this test </button>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                        <div class="col-sm-9 col-md-6 col-lg-8">
+                            <h4> Click to delete a test </h4>
+                            <div class="list-group">
+                                <button type="button" class="list-group-item" ng-repeat="t in selectedTests" ng-click="removeTest(t)">{{t.name}}</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        {{message}}
+                        <button class="btn btn-primary pull-right btn-sm RbtnMargin" type="button" ng-click="save()">Save configuration </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
