--- a/service/html/index.html
+++ b/service/html/index.html
@@ -12,25 +12,25 @@
     <!-- Custom CSS -->
     <link href="/css/simple-sidebar.css" rel="stylesheet">
 </head>
-<script src="/js/jquery.min.js"></script>
-<script src="/js/ajaxmin.js"></script>
-<script src="/js/ajaxmodal.js"></script>
-<script src="/js/ajaxroutermin.js"></script>
-<script src="/js/bootstrap.min.js"></script>
-<script src="/js/ajaxresourcemin.js"></script>
-<script src="/js/app.controller.js"></script>
-<script src="/js/stats.controller.js"></script>
-<script src="/js/manage.controller.js"></script>
-<script src="/js/dashboard.controller.js"></script>
-<script src="/js/configure.controller.js"></script>
-<script src="/js/settings.controller.js"></script>
-<script src="/js/serverevents.controller.js"></script>
-<script src="/js/clients.resource.js"></script>
-<script src="/js/tests.resource.js"></script>
-<script src="/js/stats.resource.js"></script>
-<script src="/js/manage.resource.js"></script>
-<script src="/js/server.resource.js"></script>
-<script src="/js/settings.resource.js"></script>
+<script src="/js/libs/jquery.min.js"></script>
+<script src="/js/libs/ajaxmin.js"></script>
+<script src="/js/libs/ajaxmodal.js"></script>
+<script src="/js/libs/ajaxroutermin.js"></script>
+<script src="/js/libs/bootstrap.min.js"></script>
+<script src="/js/libs/ajaxresourcemin.js"></script>
+<script src="/js/controllers/app.controller.js"></script>
+<script src="/js/controllers/stats.controller.js"></script>
+<script src="/js/controllers/manage.controller.js"></script>
+<script src="/js/controllers/dashboard.controller.js"></script>
+<script src="/js/controllers/configure.controller.js"></script>
+<script src="/js/controllers/settings.controller.js"></script>
+<script src="/js/controllers/serverevents.controller.js"></script>
+<script src="/js/resources/clients.resource.js"></script>
+<script src="/js/resources/tests.resource.js"></script>
+<script src="/js/resources/stats.resource.js"></script>
+<script src="/js/resources/manage.resource.js"></script>
+<script src="/js/resources/server.resource.js"></script>
+<script src="/js/resources/settings.resource.js"></script>
 <body ng-controller="MainCtrl">
     <div id="wrapper">
         <div ui-view="menubar" ng-cloak=""></div>
