--- a/service/html/configure.html
+++ b/service/html/configure.html
@@ -33,7 +33,7 @@
                             </div>
                         </div>
                         <div class="col-sm-9 col-md-6 col-lg-8">
-                            <h4> Click to delete a test </h4>
+                            <h4> Click a test to delete </h4>
                             <div class="list-group">
                                 <button type="button" class="list-group-item" ng-repeat="t in selectedTests" ng-click="removeTest(t)">{{t.name}}</button>
                             </div>
