--- a/service/html/dashboard.html
+++ b/service/html/dashboard.html
@@ -34,7 +34,7 @@
     </table>
     <form>
         <div class="input-group">
-            <input type="text" class="form-control" placeholder="Add a new client" ng-model="newclient.ip">
+            <input type="text" class="form-control" placeholder="Add a new client or subnet" ng-model="newclient.ip">
             <span class="input-group-btn">
    <button class="btn btn-default" type="button" ng-click="addClient(newclient)">
       <span class="glyphicon glyphicon-plus-sign"></span>
