Adds help text.

--- a/service/html/help.html
+++ b/service/html/help.html
@@ -1,6 +1,32 @@
 <div>
     <H3 style="text-align: center">Automation Framework Help</H3>
-    <p>
-        This help will be implemented later.
-    </p>
+	<div class="container">
+	  <p>The help contains simplified instructions and links to actions to configure you automation installation. </p>
+	  <p> The web interface to AF is designed to be an AJAX based single page application which is embedded in the automation server. It should run on most modern browsers.</p>
+
+	  <div class="panel-group">
+	    <div class="panel panel-default">
+	      <div class="panel-heading">Dashboard</div>
+	      <div class="panel-body">
+	      	The dashboard contains quick links to most frequent tasks.
+	      	<p> The information displayed here contains the IP address of the client, the number of its logs previously stored, its current status and progress, and links to detailed statistics and configuration edit. The statistics and configuration edit button, when clicked, launch a popup.</p>
+	      	<p></p>	
+	      </div>
+	    </div>
+	    <div class="panel panel-default">
+	      <div class="panel-heading">Server Events</div>
+	      <div class="panel-body">Displays the server logs and the refresh button provides a means to refresh the log content without refreshing the page.</div>
+	    </div>
+	    <div class="panel panel-default">
+	      <div class="panel-heading">Configuration backup and restoration</div>
+	      <div class="panel-body"> Backing up and restoring a configuration is a good way to ensure that configuration changes dont break due to human errors.
+	      Also provides means to quickly replicate a setup.</div>
+	    </div>
+	    <div class="panel panel-default">
+	      <div class="panel-heading">Global settings</div>
+	      <div class="panel-body">The global settings contain connection parameters used when remote installer is launched. Additionally, it contains profiles available. </div>
+	    </div>
+	  </div>
+	</div>
+
 </div>
