--- a/service/html/settings.html
+++ b/service/html/settings.html
@@ -26,6 +26,13 @@
             </div>
         </div>
         <div class="form-group">
+            <label for="profile" class="col-sm-2 control-label">Profile</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="profile" placeholder="Enter Profile" ng-model="settings.profile">
+            </div>
+        </div>
+
+        <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
                 <button type="submit" class="btn btn-default" ng-click="saveSettings()">Save Settings</button>
             </div>
