shows message on settings update

--- a/service/html/settings.html
+++ b/service/html/settings.html
@@ -1,5 +1,9 @@
 <div>
     <H3 style="text-align: center">Automation Framework Global Settings</H3>
+    <div class="alert alert-success">
+        <strong ng-show="message">{{message}}</strong>
+    </div>
+
     <form class="form-horizontal" role="form">
         <div class="form-group">
             <label for="downloadUrl" class="col-sm-2 control-label">Download Url</label>
