Displays profiles available

--- a/service/html/settings.html
+++ b/service/html/settings.html
@@ -33,6 +33,7 @@
             <label for="profile" class="col-sm-2 control-label">Profile</label>
             <div class="col-sm-10">
                 <input type="text" class="form-control" id="profile" placeholder="Enter Profile" ng-model="settings.profile">
+                <label>Available profiles are "{{settings.profileMessage}}"</label>
             </div>
         </div>
 
