--- a/service/html/configure.html
+++ b/service/html/configure.html
@@ -2,7 +2,7 @@
     <div class="modal-dialog" style="width: 80%; display: block">
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true" ng-click="close(null, 200)">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true" ng-click="close(null, 200)" data-backdrop="false">
                     &times;</button>
                 <h4 class="modal-title">Configure {{client.ip}}</h4>
                 
