--- a/service/html/dashboard.html
+++ b/service/html/dashboard.html
@@ -11,26 +11,34 @@
         <thead>
             <tr>
                 <th>Ip</th>
-                <th>History</th>
-                <th>Running </th>
-                <th>Progress</th>
-                <th>Stats</th>
-                <th>Edit</th>
+                <th><span class="glyphicon glyphicon-piggy-bank"></span></th>
+                <th><span class="glyphicon glyphicon-random"></span></th>
+                <th><span class="glyphicon glyphicon-dashboard"></span></th>
+                <th><span class="glyphicon glyphicon-stats"></span></th>
+                <th><span class="glyphicon glyphicon-wrench"></span></th>
                 <th><span class="glyphicon glyphicon-hand-down"></span></th>
             </tr>
         </thead>
         <tbody>
             <tr ng-repeat="client in clients">
-                <td>{{client.ip}}</td>
+                <td>{{ client.ip }}</td>
                 <td>{{client.history + " previous runs"}}</td>
-                <td>{{displayProgressRank(client)}}</td>
-                <td>{{client.progress + ' %'}}</td>
+                <td><span class="label" 
+			ng-class="{'label-success': client.progress == 100,
+			'label-danger': client.progress == 0,
+			'label-warning': client.progress > 0 && client.progress < 100}">
+			{{displayProgressRank(client)}}</span></td>
+                <td><span class="label" 
+			ng-class="{'label-success': client.progress == 100,
+			'label-danger': client.progress == 0,
+			'label-warning': client.progress > 0 && client.progress < 100}">
+			{{client.progress + ' %'}}</span></td>
                 <td ng-click="showStats(client)"><span class="glyphicon glyphicon-fullscreen"></span></td>
                 <td ng-click="configure(client)"><span class="glyphicon glyphicon-cog"></span></td>
                 <td ng-show="(client.progress == 0 || client.progress == 100) && client.ip.indexOf('*') < 0" ng-click="launch(client)">
                     <span class="glyphicon glyphicon-play-circle"></span>
                 </td>
-                <td ng-show="client.progress != 0 || client.ip.indexOf('*') >= 0">
+                <td ng-show="(client.progress != 0 && client.progress != 100) || client.ip.indexOf('*') >= 0">
                     <span class="glyphicon glyphicon-ban-circle"></span>
                 </td>
             </tr>
