--- a/service/html/stats.html
+++ b/service/html/stats.html
@@ -2,7 +2,7 @@
     <div class="modal-dialog" style="width: 100%; display: block">
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true" ng-click="close(null, 200)">&times;</button>
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true" ng-click="close(null, 200)" data-backdrop="false">&times;</button>
                 <h4 class="modal-title"> <span ng-click="loadStatsForClient(client)"><small class="glyphicon glyphicon-refresh"></small></span>
 
 				Automation Server Statistics for {{client.ip}} 
