Adds remote installer status

--- a/service/html/index.html
+++ b/service/html/index.html
@@ -25,12 +25,14 @@
 <script src="/js/controllers/configure.controller.js"></script>
 <script src="/js/controllers/settings.controller.js"></script>
 <script src="/js/controllers/serverevents.controller.js"></script>
+<script src="/js/controllers/remoteInstaller.controller.js"></script>
 <script src="/js/resources/clients.resource.js"></script>
 <script src="/js/resources/tests.resource.js"></script>
 <script src="/js/resources/stats.resource.js"></script>
 <script src="/js/resources/manage.resource.js"></script>
 <script src="/js/resources/server.resource.js"></script>
 <script src="/js/resources/settings.resource.js"></script>
+<script src="/js/resources/remoteInstaller.resource.js"></script>
 <body ng-controller="MainCtrl">
     <div id="wrapper">
         <div ui-view="menubar" ng-cloak=""></div>
