--- a/service/html/leftmenu.html
+++ b/service/html/leftmenu.html
@@ -13,6 +13,9 @@
             <a href="#" ui-sref='manage()'>Backup / Restore Configuration</a>
         </li>
         <li>
+            <a href="#" ui-sref='remote()'>Remote Installer Events</a>
+        </li>
+        <li>
             <a href="#" ui-sref='settings()'>Global settings</a>
         </li>
         <li>
