adds test visualisation

--- a/service/html/index.html
+++ b/service/html/index.html
@@ -16,16 +16,20 @@
 <script src="/js/libs/ajaxmin.js"></script>
 <script src="/js/libs/ajaxmodal.js"></script>
 <script src="/js/libs/ajaxroutermin.js"></script>
+<script src="/js/libs/graph.min.js"></script>
 <script src="/js/libs/bootstrap.min.js"></script>
 <script src="/js/libs/ajaxresourcemin.js"></script>
+
 <script src="/js/controllers/app.controller.js"></script>
 <script src="/js/controllers/stats.controller.js"></script>
 <script src="/js/controllers/manage.controller.js"></script>
 <script src="/js/controllers/dashboard.controller.js"></script>
+<script src="/js/controllers/mindmap.controller.js"></script>
 <script src="/js/controllers/configure.controller.js"></script>
 <script src="/js/controllers/settings.controller.js"></script>
 <script src="/js/controllers/serverevents.controller.js"></script>
 <script src="/js/controllers/remoteInstaller.controller.js"></script>
+
 <script src="/js/resources/clients.resource.js"></script>
 <script src="/js/resources/tests.resource.js"></script>
 <script src="/js/resources/stats.resource.js"></script>
@@ -33,6 +37,9 @@
 <script src="/js/resources/server.resource.js"></script>
 <script src="/js/resources/settings.resource.js"></script>
 <script src="/js/resources/remoteInstaller.resource.js"></script>
+<script src="/js/directives/mindmap.directive.js"></script>
+
+
 <body ng-controller="MainCtrl">
     <div id="wrapper">
         <div ui-view="menubar" ng-cloak=""></div>
