--- a/service/html/configure.html
+++ b/service/html/configure.html
@@ -4,8 +4,9 @@
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true" ng-click="close(null, 200)" data-backdrop="false">
                     &times;</button>
-                <h4 class="modal-title">Configure {{client.ip}}</h4>
-                
+                <h4 class="modal-title">Configure {{client.ip}}
+		<small ng-click="showMindmapPopup()"><span class="glyphicon glyphicon-eye-open"></i></span>		
+		</h4>                
                 <div class="col-xs-6 col-sm-3 col-md-3 pull-right">
                         <i class="icon-search"></i>
                         <input ng-model="filterText" type="search" class="form-control" placeholder="Filter"/>
