--- a/service/html/configure.html
+++ b/service/html/configure.html
@@ -4,11 +4,8 @@
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true" ng-click="close(null, 200)" data-backdrop="false">
                     &times;</button>
-                <h4 class="modal-title">Configure {{client.ip}}
-		<small ng-click="showMindmapPopup()"><span class="glyphicon glyphicon-eye-open"></i></span>		
-		</h4>                
+                <h4 class="modal-title">Configure {{client.ip}}</h4>                
                 <div class="col-xs-6 col-sm-3 col-md-3 pull-right">
-                        <i class="icon-search"></i>
                         <input ng-model="filterText" type="search" class="form-control" placeholder="Filter"/>
                 </div>
 
@@ -40,7 +37,12 @@
                             </div>
                         </div>
                         <div class="col-sm-9 col-md-6 col-lg-8">
-                            <h4> Click a test to delete </h4>
+                            <h4> Selected Tests 
+				<small> {Click to delete} </small>
+				<small class= "pull-right" ng-click="showMindmapPopup()">
+					<span class="glyphicon glyphicon-eye-open"></span>
+				</small>
+			    </h4>
                             <div class="list-group">
                                 <button type="button" class="list-group-item" ng-repeat="t in selectedTests | filter: filterTests" ng-click="removeTest(t)">{{t.name}}</button>
                             </div>
