--- a/service/html/dashboard.html
+++ b/service/html/dashboard.html
@@ -22,17 +22,23 @@
         <tbody>
             <tr ng-repeat="client in clients">
                 <td>{{ client.ip }}</td>
-                <td>{{client.history + " previous runs"}}</td>
+                <td>
+                    <button ng-click="showHistoryPopup(client)" 
+                            type="button" class="btn btn-primary btn-xs">{{client.history.length}}
+                    </button>
+                </td>
                 <td><span class="label" 
-			ng-class="{'label-success': client.progress == 100,
-			'label-danger': client.progress == 0,
-			'label-warning': client.progress > 0 && client.progress < 100}">
-			{{displayProgressRank(client)}}</span></td>
+        			ng-class="{'label-success': client.progress == 100,
+        			'label-danger': client.progress == 0,
+        			'label-warning': client.progress > 0 && client.progress < 100}">
+        			{{displayProgressRank(client)}}</span>
+                </td>
                 <td><span class="label" 
-			ng-class="{'label-success': client.progress == 100,
-			'label-danger': client.progress == 0,
-			'label-warning': client.progress > 0 && client.progress < 100}">
-			{{client.progress + ' %'}}</span></td>
+        			ng-class="{'label-success': client.progress == 100,
+        			'label-danger': client.progress == 0,
+        			'label-warning': client.progress > 0 && client.progress < 100}">
+        			{{client.progress + ' %'}}</span>
+                </td>
                 <td ng-click="showStats(client)"><span class="glyphicon glyphicon-fullscreen"></span></td>
                 <td ng-click="configure(client)"><span class="glyphicon glyphicon-cog"></span></td>
                 <td ng-show="(client.progress == 0 || client.progress == 100) && client.ip.indexOf('*') < 0" ng-click="launch(client)">
