--- a/service/html/history.html
+++ b/service/html/history.html
@@ -14,6 +14,8 @@
                          <th>Passed</th>
                          <th>Failed</th>
                          <th></th>
+                	 <th><span class="glyphicon glyphicon-stats"></span></th>
+                	 <th><span class="glyphicon glyphicon-file"></span></th>
                       </tr>
                    </thead>
                    <tbody>
@@ -32,9 +34,10 @@
                               <div class="progress-bar progress-bar-warning" role="progressbar"
                                 ng-style="{width: getPercent(h.total - h.passed - h.failed, h.total) + '%'}">
                               </div>
-
                             </div>
                          </td>
+                         <td><a ng-href="/reports/{{client.ip}}/{{'client-' + h.timestamp + '.html'}}">R</a></td>
+                         <td><a ng-href="/logs/{{client.ip}}/{{'client-' + h.timestamp + '.log'}}">L</a></td>
                       </tr>
                    </tbody>
                    
