--- a/service/html/history.html
+++ b/service/html/history.html
@@ -13,9 +13,9 @@
                          <th>Total</th>
                          <th>Passed</th>
                          <th>Failed</th>
-                         <th></th>
                 	 <th><span class="glyphicon glyphicon-stats"></span></th>
                 	 <th><span class="glyphicon glyphicon-file"></span></th>
+                         <th></th>
                       </tr>
                    </thead>
                    <tbody>
@@ -23,6 +23,9 @@
                          <td>{{h.total}}</td>
                          <td>{{h.passed}}</td>
                          <td>{{h.failed}}</td>
+                         <td><a ng-href="/reports/{{client.ip}}/{{'client-' + client.ip + '-' + h.timestamp + '.html'}}"><span class="glyphicon glyphicon-fullscreen"></span></a></td>
+                         <td><a ng-href="/logs/{{client.ip}}/{{'client-' + client.ip + '-' + h.timestamp + '.log'}}"><span class="glyphicon glyphicon-download"></span></a></td>
+
                          <td>
                             <div class="progress">
                               <div class="progress-bar progress-bar-success" role="progressbar"
@@ -36,8 +39,6 @@
                               </div>
                             </div>
                          </td>
-                         <td><a ng-href="/reports/{{client.ip}}/{{'client-' + h.timestamp + '.html'}}">R</a></td>
-                         <td><a ng-href="/logs/{{client.ip}}/{{'client-' + h.timestamp + '.log'}}">L</a></td>
                       </tr>
                    </tbody>
                    
