changes mouse pointer on hover

--- a/service/html/remote.html
+++ b/service/html/remote.html
@@ -1,6 +1,6 @@
 <div>
     <H3 style="text-align: center">
-    	 <small ng-click="loadRemoteInstaller()"><span class="glyphicon glyphicon-refresh"></span></small>
+    	 <small ng-click="loadRemoteInstaller()" style="cursor: pointer"><span class="glyphicon glyphicon-refresh"></span></small>
 	Remote Installer Events</H3>
 <table class = "table table-striped">   
    <thead>
