--- a/service/html/serverevent.html
+++ b/service/html/serverevent.html
@@ -3,7 +3,7 @@
     <table class="table">
         <thead>
             <tr>
-                <th ng-click="loadAllEvents()"><span class="glyphicon glyphicon-refresh"></span></th>
+                <th ng-click="loadAllEvents()" style="cursor: pointer"><span class="glyphicon glyphicon-refresh"></span></th>
                 <th>Logs</th>
             </tr>
         </thead>
