--- a/service/html/configure.html
+++ b/service/html/configure.html
@@ -39,7 +39,7 @@
                         <div class="col-sm-9 col-md-6 col-lg-8">
                             <h4> Selected Tests 
 				<small> {Click to delete} </small>
-				<small class= "pull-right" ng-click="showMindmapPopup()">
+				<small class= "pull-right" ng-click="showMindmapPopup()" style="cursor: pointer">
 					<span class="glyphicon glyphicon-eye-open"></span>
 				</small>
 			    </h4>
