--- a/service/html/dashboard.html
+++ b/service/html/dashboard.html
@@ -2,7 +2,7 @@
     <h3 style="text-align: center">
         <span ng-click="loadAllClients()">
         Dashboard
-        <small class="pull-right glyphicon glyphicon-refresh" style="right: 40px"></small></span>
+        <small style="cursor: pointer" class="pull-right glyphicon glyphicon-refresh" style="right: 40px"></small></span>
     </h3>
     <div class="alert alert-success">
         <strong ng-show="message">{{message}}</strong>
@@ -24,24 +24,24 @@
                 <td>{{ client.ip }}</td>
                 <td>
                     <button ng-click="showHistoryPopup(client)" 
-                            type="button" class="btn btn-primary btn-xs">{{client.history.length}}
+                            type="button" class="btn btn-xs">{{client.history.length}}
                     </button>
                 </td>
-                <td><span class="label" 
+                <td><span class="label"
         			ng-class="{'label-success': client.progress == 100,
         			'label-danger': client.progress == 0,
         			'label-warning': client.progress > 0 && client.progress < 100}">
         			{{displayProgressRank(client)}}</span>
                 </td>
-                <td><span class="label" 
+                <td><span class="label"
         			ng-class="{'label-success': client.progress == 100,
         			'label-danger': client.progress == 0,
         			'label-warning': client.progress > 0 && client.progress < 100}">
         			{{client.progress + ' %'}}</span>
                 </td>
-                <td ng-click="showStats(client)"><span class="glyphicon glyphicon-fullscreen"></span></td>
-                <td ng-click="configure(client)"><span class="glyphicon glyphicon-cog"></span></td>
-                <td ng-show="(client.progress == 0 || client.progress == 100) && client.ip.indexOf('*') < 0" ng-click="launch(client)">
+                <td style="cursor: pointer" ng-click="showStats(client)"><span class="glyphicon glyphicon-fullscreen"></span></td>
+                <td style="cursor: pointer" ng-click="configure(client)"><span class="glyphicon glyphicon-cog"></span></td>
+                <td ng-show="(client.progress == 0 || client.progress == 100) && client.ip.indexOf('*') < 0" ng-click="launch(client)" style="cursor: pointer">
                     <span class="glyphicon glyphicon-play-circle"></span>
                 </td>
                 <td ng-show="(client.progress != 0 && client.progress != 100) || client.ip.indexOf('*') >= 0">
