--- a/service/html/stats.html
+++ b/service/html/stats.html
@@ -6,6 +6,8 @@
                 <h4 class="modal-title"> <span ng-click="loadStatsForClient(client)"><small class="glyphicon glyphicon-refresh"></small></span>
 
 				Automation Server Statistics for {{client.ip}} 
+                    <span class="glyphicon glyphicon-stop" ng-show="isRunning() == true" 
+                       ng-click="abort()" style="color:red; cursor: pointer;"></span>
 				</h4>
             </div>
             <div class="modal-body">
@@ -17,11 +19,13 @@
   <div class="progress-bar progress-bar-danger" role="progressbar"
 	ng-style="{width: + getPercent('Fail') + '%'}">
   </div>
-  <div class="progress-bar progress-bar-warning active" role="progressbar"
-	ng-style="{width: getPercent('Running') + '%'}">
+  <div class="progress-bar progress-bar-warning" role="progressbar"
+    ng-style="{width: getPercent('Running') + '%'}">
+  </div>
+  <div class="progress-bar progress-bar-info" role="progressbar"
+    ng-style="{width: getPercent('Abort') + '%'}">
   </div>
 </div>
-
                 <div>
                     <div class="table-responsive">
                         <table class="table">
@@ -46,7 +50,8 @@
 					<span class="label" 
 						ng-class="{'label-success': test.result == 'Pass',
 						'label-warning': test.result == 'Running',
-						'label-danger': test.result == 'Fail',
+                        'label-danger': test.result == 'Fail',
+                        'label-info': test.result == 'Abort',
 						'label-default': test.result == 'Pending'}">{{test.result}}</span></td>
                                 </tr>
                             </tbody>
