--- a/service/html/leftmenu.html
+++ b/service/html/leftmenu.html
@@ -10,10 +10,10 @@
             <a href="#" ui-sref='serverevent()'>Server Events</a>
         </li>
         <li>
-            <a href="#" ui-sref='manage()'>Backup / Restore Configuration</a>
+            <a href="#" ui-sref='manage()'>Backup / Restore</a>
         </li>
         <li>
-            <a href="#" ui-sref='remote()'>Remote Installer Events</a>
+            <a href="#" ui-sref='remote()'>Remote Installer</a>
         </li>
         <li>
             <a href="#" ui-sref='settings()'>Global settings</a>
